# Dynamic-Risk-Propagation-and-Failure-Containment-in-Large-Scale-Enterprise-Microservice-Graphs

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  full_validation.yaml  quick_sanity.yaml
notebooks/: microservice_cascade_experiments.ipynb
risk_containment/: __init__.py  graph_gen.py  metrics.py  models.py  online_boutique_graph.json  plotting.py  run_experiments.py  scenarios.py  simulator.py  strategies.py
scripts/: generate_figures.py  run_experiments.py
simulator/: __init__.py  failure_model.py  graph_generator.py  metrics.py  runner.py  scenarios.py  workload.py
tests/: test_risk_and_hysteresis.py
